annoying scrollbar bug fix . still not perfect

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,12 @@
 /* html, body, heading */
 @layer base {
   body {
-    @apply bg-[#141414] text-white 
+    @apply bg-[rgb(20,20,20)] text-white 
     !scrollbar
-    !scrollbar-thumb-red-600;
+    !scrollbar-hide
+    !scrollbar-thumb-red-600
+    !overflow-x-hidden
+    !overflow-visible
   }
 
   header {
